tests/scan/fixtures/validation/negative/clean_cargo_clean_signal_handler/src/lib.rs
//! A clean Rust crate: clean_signal_handler.

pub fn hello() -> &'static str { "hello" }
